--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>com.wolfyscript.wolfyutils.spigot</groupId>
             <artifactId>wolfyutils-spigot</artifactId>
-            <version>4.16.8-SNAPSHOT</version>
+            <version>4.16.7.0</version>
             <scope>provided</scope>
         </dependency>
         <!--
